<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signin"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/txtHeythere"
        style="@style/txtPoppinssemibold35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="150dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="Hey there!"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/lbl_hey_there" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profileicon"
        app:layout_constraintBottom_toBottomOf="@+id/txtSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtSignIn"
        app:tint="@color/cyan_900" />

    <TextView
        android:id="@+id/txtSignIn"
        style="@style/txtPoppinssemibold25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="7dp"
        android:layout_marginTop="25dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="Sign In"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/txtHeythere"
        tools:text="@string/lbl_sign_in" />



    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded"
        android:hint="@string/email_address"
        android:autofillHints="emailAddress"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/emailicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailEntryField"
            cornerRadius="25dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        cornerRadius="25dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/txtNewHereSign"
        style="@style/txtPoppinssemibold18"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/new_here_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout1"
        tools:text="@string/msg_new_here_sign" />
    <TextView
        android:id="@+id/txtForgotpassword"
        style="@style/txtPoppinssemibold15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="Forgot password"
        app:layout_constraintEnd_toEndOf="@+id/txtNewHereSign"
        app:layout_constraintStart_toStartOf="@+id/txtNewHereSign"
        app:layout_constraintTop_toBottomOf="@+id/txtNewHereSign"
        tools:text="@string/msg_forgot_password" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/backgroundbutton"
        android:text="@string/enter"
        android:textColor="#1B4965"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>