<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:background="@drawable/signup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profileicon"
        app:layout_constraintBottom_toBottomOf="@+id/txtSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtSignUp"
        app:tint="@color/cyan_900" />

    <TextView
        android:id="@+id/txtSignUp"
        style="@style/txtPoppinssemibold35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="48dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="Sign Up"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/lbl_sign_up" />
    <TextView
        android:id="@+id/txtSelectcategory"
        style="@style/txtPoppinsregular20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:ellipsize="end"
        android:gravity="start"
        android:singleLine="true"
        android:text="Select category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp"
        tools:text="@string/lbl_select_category" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="-5dp"
        app:dividerColor="@color/cyan_900"
        app:layout_constraintEnd_toEndOf="@+id/txtSelectcategory"
        app:layout_constraintStart_toStartOf="@+id/txtSelectcategory"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectcategory" />

    <RadioButton
        android:id="@+id/rbAuthority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:buttonTint="@color/cyan_900"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:text="@string/lbl_authority"
        android:textColor="@color/cyan_900"
        android:textFontWeight="400"
        android:textSize="@dimen/_18pxh"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectcategory"
        tools:text="@string/lbl_authority" />

    <RadioButton
        android:id="@+id/rbResident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="84dp"
        android:buttonTint="@color/cyan_900"
        android:checked="true"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:singleLine="true"
        android:text="@string/lbl_resident"
        android:textColor="@color/cyan_900"
        android:textFontWeight="400"
        android:textSize="@dimen/_18pxh"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toEndOf="@+id/rbAuthority"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectcategory"
        tools:text="@string/lbl_resident" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/rounded"
        android:layout_marginTop="7dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:hint="Name"
        app:endIconDrawable="@drawable/profileicon"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rbAuthority">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEntryField"
            cornerRadius="25dp"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        cornerRadius="25dp"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded"
        android:hint="Email Address"
        app:endIconDrawable="@drawable/emailicon"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@+id/nameInputLayout"
        app:layout_constraintStart_toStartOf="@+id/nameInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailEntryField"
            cornerRadius="25dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            cornerRadius="25dp"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/emailInputLayout"
            app:layout_constraintStart_toStartOf="@+id/emailInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEntryField"
                cornerRadius="25dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/codeInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        cornerRadius="25dp"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rounded"
        android:hint="Code"
        app:endIconDrawable="@drawable/codeicon"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/codeEntryField"
            cornerRadius="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnresident"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/backgroundbutton"
        android:text="SIGN UP"
        android:textColor="#1B4965"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/codeInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
